[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Home.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menus/JoinDialog.gd" type="Script" id=2]

[node name="screen_home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="button_create_game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -60.0
margin_right = 60.0
text = "Create Game"

[node name="button_join_game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -60.0
margin_top = 50.0
margin_right = 60.0
text = "Join Game"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="dialog_join_game" type="PopupDialog" parent="."]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
script = ExtResource( 2 )

[node name="input_game_id" type="LineEdit" parent="dialog_join_game"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.2
margin_bottom = 40.0
align = 1
max_length = 5

[node name="label_game_id" type="Label" parent="dialog_join_game"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.2
margin_top = -30.0
margin_bottom = -30.0
text = "Game ID"

[node name="button_try_join" type="Button" parent="dialog_join_game"]
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.8
text = "Join Game"

[node name="HTTPRequest" type="HTTPRequest" parent="dialog_join_game"]
